--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         If you have questions or believe your rights are being violated, please
         contact us at:
         <br />
-        📧 <a href="mailto:tehphilbdev@gmail.com">your@email.com</a>
+        📧 <a href="mailto:tehphilbdev@gmail.com">tehphilbdev@gmail.com</a>
       </p>
 
       <footer>
